--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>RiverProfiler v0.1
+    <title>RiverProfileApp v0.11
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid p-5 bg-info text-white text-center">
-    <h1>RiverProfiler</h1>
+    <h1>RiverProfileApp</h1>
     <p>Fast, Global, Exploratory river profiling</p>
     <video width="100%" height="400" autoplay loop muted plays-inline>
         <source src="static/record1.mov" type="video/mp4" />
@@ -26,7 +26,7 @@
         <div class="col-sm-4">
             <h3>Open</h3>
             <p> </p>
-            <p>All 90m resolution data is available to download and investigate and import for GIS or programming</p>
+            <p>All 90m resolution chi-elevation data is available to download and investigate and import for GIS or programming</p>
 
 
         </div>
