--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
         </div>
         <div class="col-sm-4">
             <h3>Try it</h3>
-            <p>Click  <a href="http://35.158.238.205:13211/profiler"> here </a> to try it!</p>
-            <p>In this initial testing phase, we welcome all feedback! Please send any bugs / issues and ideas for improvements to gregr13210 .at- gmail.com .  </p>
+            <p>Access the app from <a href="http://35.158.238.205:13211/profiler"> here </a></p>
+            <p>At this time, we welcome any feedback - please submit reports of any bugs / issues, and especially ideas for improvements to the issues at <a href=github.com/riverprofileapp> github.com/riverprofileapp </a> or to gregr13210 .at- gmail.com .  </p>
         </div>
     </div>
 </div>
 
 </body>
+<footer>
+     My personal page: ruetg.github.io
 </html>
