--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-sm-4">
             <h3>Try it</h3>
             <p>Access the app from <a href="http://35.158.238.205:13211/profiler"> here </a></p>
-            <p>At this time, we welcome any feedback - please submit reports of any bugs / issues, and especially ideas for improvements to the issues at <a href=github.com/riverprofileapp> github.com/riverprofileapp </a> or to gregr13210 .at- gmail.com .  </p>
+            <p>At this time, we welcome any feedback - please submit reports of any bugs / issues, and especially ideas for improvements to the issues to the <a href=https://www.github.com/riverprofileapp/riverprofileapp> repo  </a> or to gregr13210 .at- gmail.com .  </p>
         </div>
     </div>
 </div>
@@ -47,4 +47,5 @@
 </body>
 <footer>
      My personal page: ruetg.github.io
+</footer>
 </html>
