--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 </div>
 
 </body>
-<footer>
+<footer class="page-footer font-small blue">
+
+  <div class="footer-copyright text-center py-3">
+      My personal page: <ahref= https://ruetg.github.io> <ruetg.github.io>
+  </div>
+
 </footer>
 </html>
