--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <footer class="page-footer font-small blue">
 
   <div class="footer-copyright text-center py-3">
-      Created by G. Ruetenik. My personal page: <a href= https://ruetg.github.io> ruetg.github.io </a>
+      Created by Greg Ruetenik. My personal page: <a href= https://ruetg.github.io> ruetg.github.io </a>
   </div>
 
 </footer>
