--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="col-sm-4">
             <h3>Try it</h3>
             <p>Access the app from <a href="http://65.109.122.125:13211/profiler"> here </a></p>
+            <p>Update 01/23 - moved to a new server (that's all for now, but more updates coming soon!) </a></p>
             <p>At this time, we welcome any feedback - please submit reports of any bugs / issues, and especially ideas for improvements to the issues to the <a href=https://www.github.com/riverprofileapp/riverprofileapp> repo  </a> or to gregr13210 .at- gmail.com .  </p>
         </div>
     </div>
